Whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,7 @@
 .center {
 	text-align: center;
 }
+
+.spacer {
+	margin-top: 40px;
+}
